<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动警务</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ryfl">人员分类</string>
    <string name="fzjg">发证机关</string>
    <string name="fzjgms">发证机关</string>
    <string name="fzjgms_hint">农机部队可录入</string>
    <string name="dabh">档案编号</string>
    <string name="xm">姓 名</string>
    <string name="lxdz">联系地址</string>
    <string name="jszh">驾驶证号</string>
    <string name="zjcx">准驾车型</string>
    <string name="ljjf">累计记分</string>
    <string name="lxdh">联系方式</string>
    <string name="clfl">车辆分类</string>
    <string name="hpzl">号牌种类</string>
    <string name="hphm">号牌号码</string>
    <string name="jtfs">交通方式</string>
    <string name="wfsj">违法时间</string>
    <string name="wfdd">违法地点</string>
    <string name="wfxw">违法行为</string>
    <string name="clsj">处理时间</string>
    <string name="cfzl">处罚种类</string>
    <string name="jkfs">缴款方式</string>
    <string name="sfzh">身份证号</string>
    <string name="bzz">标准值</string>
    <string name="scz">实测值</string>
    <string name="nl">年龄</string>
    <string name="xb">性别</string>
    <string name="xzqh">行政区划</string>
    <string name="query">查询</string>
    <string name="query_wfdm">查代码</string>
    <string name="clbd">车辆比对</string>
    <string name="sys_prompt_text">系统提示</string>
    <string name="start_time">开始日期</string>
    <string name="end_time">结束日期</string>
    <string name="change">修改</string>
    <string name="cancel">退出</string>
    <string name="progress_wait">正在请求数据,请稍等</string>
    <string name="acd_date">事故时间</string>
    <string name="acd_position">事故地点</string>
    <string name="save">保存</string>
    <string name="upload">上传</string>
    <string name="print">打印</string>
    <string name="preview">预览</string>
    <string name="photo">拍照</string>
    <string name="add_pic">加入照片</string>
    <string name="show_photo">显示照片</string>
    <string name="re_photo">重拍</string>
    <string name="list_nodata">对不起，没有数据可以显示</string>
    <string name="select_img">选择图标</string>
    <string name="item_line1">第一行文本</string>
    <string name="item_line2">第二行文本</string>
    <string name="current_dir">当前目录</string>
    <string name="up_one_level">上级目录</string>
    <string name="album_name">CameraSample</string>
    <string name="jdszl">决定书种类</string>
    <string name="tv_xzqh">行政区划</string>
    <string name="tv_chinese">文字检索</string>
    <string name="tv_wfdd_gls">公里数</string>
    <string name="tv_wfdd_ms">米数</string>
    <string name="tv_wfdd_dlmc">道路名称（可修改）</string>
    <string name="btn_change_wfdd">选地点</string>
    <string name="btn_change_wfxw">选行为</string>
    <string name="btn_date">日期</string>
    <string name="btn_time">时间</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">退出</string>
    <string name="btn_ok">确定</string>
    <string name="btn_del">删除</string>
    <string name="btn_detail">详细</string>
    <string name="btn_upload">上传</string>
    <string name="btn_print">打印</string>
    <string name="btn_preview">预览</string>
    <string name="btn_change">修改</string>
    <string name="btn_find">查找</string>
    <string name="check_detail">查看详细</string>
    <string name="btn_del_image">删图片</string>
    <string name="btn_add_favor">加入自选</string>
    <string name="wfdd_gls_ms_sm">说明：国省道公里数和米数是必填项，普通道路无需填写</string>
    <string name="need_option">必填项</string>
    <string name="option">非必填</string>
    <string name="image_list">图片列表</string>
    <string name="image_content">拍摄图片</string>
    <string name="image_rkqk">入库情况</string>
    <string name="menu_zhcx">综合查询</string>
    <string name="menu_config">系统设置</string>
    <string name="menu_all_upload">一键上传</string>
    <string name="jqtb_detail">警情通报详细信息</string>
    <string name="gcm_address">关城门地点报备</string>
    <string name="gcm_list">关城门报备列表</string>
    <string name="six_sp">六分审批</string>
    <string name="fxczf_list">非现场列表</string>
    <string name="jbyw_bdrk_title">本地人口综合查询</string>
    <string name="idcard_title">蓝牙二代证比对</string>
    <string name="one_idcard_title">一体机二代证比对</string>
    <string name="hand_bdbj">手工比对</string>
    <string name="clear_info">消除信息</string>
    <string name="query_clgj">查询车辆轨迹</string>
    <string name="result_clgj">车辆轨迹结果</string>
    <string name="btn_del_all">删除已上传</string>
    <string name="lab_school_tcz">学校临停证</string>
    <string name="veh_syxz">使用性质</string>
    <string name="ry_zzmm">政治面貌</string>
    <string name="ry_zyxx">职业信息</string>
    <string name="scan_idcard">二代证</string>
</resources>
