<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ntgajwt="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntga.jwt.AcdTakePhotoActivity" >

    <item
        android:id="@+id/open_camare"
        android:orderInCategory="100"
        android:title="@string/photo"
        ntgajwt:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/save_file"
        android:orderInCategory="100"
        android:title="@string/save"
        ntgajwt:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_upload"
        android:orderInCategory="100"
        android:title="@string/upload"
        ntgajwt:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_del_image"
        android:orderInCategory="100"
        android:title="@string/btn_del_image"
        ntgajwt:showAsAction="ifRoom"/>

</menu>