<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ntgajwt="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntga.jwt.AcdSimpleShowList" >

    <item
        android:id="@+id/menu_upload"
        android:orderInCategory="100"
        android:title="@string/upload"
        ntgajwt:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_print"
        android:orderInCategory="100"
        android:title="@string/print"
        ntgajwt:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_preview"
        android:orderInCategory="100"
        android:title="@string/preview"
        ntgajwt:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_detail"
        android:orderInCategory="100"
        android:title="@string/btn_detail"
        ntgajwt:showAsAction="ifRoom"/>
</menu>