<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/unless_linear"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/hpzl" >
    </TextView>

    <Spinner
        android:id="@+id/spin_hpzl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/textView1" >
    </Spinner>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spin_hpzl"
        android:layout_toLeftOf="@+id/spin_hpzl"
        android:text="@string/hphm" />

    <Spinner
        android:id="@+id/spin_hpqz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" >
    </Spinner>

    <EditText
        android:id="@+id/edit_hphm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/spin_hpqz"
        android:inputType="textCapCharacters" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spin_hpqz"
        android:layout_toLeftOf="@+id/spin_hpqz"
        android:text="@string/wfsj" >
    </TextView>

    <Button
        android:id="@+id/but_wfsj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/btn_time"
        android:textSize="16sp" >
    </Button>

    <EditText
        android:id="@+id/edit_wfsj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toLeftOf="@+id/but_wfsj"
        android:layout_toRightOf="@+id/textView3"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/but_wfsj"
        android:layout_toLeftOf="@+id/edit_wfsj"
        android:text="@string/wfdd" >
    </TextView>

    <Button
        android:id="@+id/but_wfdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/btn_change_wfdd" >
    </Button>

    <EditText
        android:id="@+id/edit_wfdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toLeftOf="@+id/but_wfdd"
        android:layout_toRightOf="@+id/textView4"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/but_wfdd"
        android:layout_toLeftOf="@+id/edit_wfdd"
        android:text="@string/wfxw" >
    </TextView>

    <Button
        android:id="@+id/but_wfxw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/btn_change_wfxw" >
    </Button>

    <EditText
        android:id="@+id/edit_wfxw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_toLeftOf="@+id/but_wfxw"
        android:layout_toRightOf="@+id/textView5"
        android:inputType="text|number" >
    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/but_wfxw"
        android:layout_toLeftOf="@+id/edit_wfxw"
        android:text="@string/image_list" >
    </TextView>

    <Button
        android:id="@+id/btn_show_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:text="@string/show_photo" />

    <Spinner
        android:id="@+id/spin_image_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toLeftOf="@+id/btn_show_image"
        android:layout_toRightOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imgview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_show_image"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/image_content"
        android:scaleType="fitCenter" />

</RelativeLayout>