<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fouce_line"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_xzqh"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spin_wfdd_xzqh"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_chinese"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_wfdd_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >

        </EditText>
        
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
         android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip" >
    </ListView>
    
    <LinearLayout
        android:id="@+id/bottom_but"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#aaa"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="3dip" >

        <Button
            android:id="@+id/btn_wfdd_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/btn_wfdd_find"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_find" />

        <Button
            android:id="@+id/btn_wfdd_add_favor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_add_favor" />
    </LinearLayout>

</LinearLayout>