<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_wfdd_gls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_wfdd_gls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_wfdd_gls"
            android:inputType="number"
            android:maxLength="4" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_wfdd_ms"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_wfdd_ms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_wfdd_ms"
            android:inputType="number"
            android:maxLength="3" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_wfdd_dlmc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_wfdd_ldmc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/btn_wfdd_dialog_favor_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok" />

</LinearLayout>