<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dip" >

    <TextView
        android:id="@+id/TextView_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/change"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView_left"
        android:contentDescription="@string/select_img"
        android:src="@android:drawable/button_onoff_indicator_on" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/select_img"
        android:src="@drawable/ok" />

    <TextView
        android:id="@+id/TextView_right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView_left"
        android:layout_marginLeft="5dip"
        android:layout_toLeftOf="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/item_line1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>